--- a/Project/.docker/docker-compose.yaml
+++ b/Project/.docker/docker-compose.yaml
@@ -7,3 +7,18 @@ services:
       - '8000:8000'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+    
+  db:
+      image: postgres:latest
+      volumes:
+        - postgres_data:/var/lib/postgresql/data/
+      environment:
+        - POSTGRES_USER=test
+        - POSTGRES_PASSWORD=test
+        - POSTGRES_DB=test
+volumes:
+  postgres_data:
