--- a/Project/app/Dockerfile
+++ b/Project/app/Dockerfile
@@ -1,11 +1,11 @@
 # syntax=docker/dockerfile:1.4
 
-FROM --platform=$BUILDPLATFORM python:3.7-alpine AS builder
+FROM --platform=$BUILDPLATFORM python:3.13.0a1-bookworm AS builder
 EXPOSE 8000
 WORKDIR /app 
 COPY requirements.txt /app
-RUN pip3 install --upgrade pip
-RUN pip3 install -r requirements.txt --no-cache-dir
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt --no-cache-dir
 COPY . /app 
 ENTRYPOINT ["python3"] 
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
