--- a/Project/app/Dockerfile
+++ b/Project/app/Dockerfile
@@ -1,9 +1,9 @@
-# syntax=docker/dockerfile:1.4
-
-FROM --platform=$BUILDPLATFORM python:3.13.0a1-bookworm AS builder
+FROM --platform=$BUILDPLATFORM python:3.12.0-alpine3.17 AS builder
 EXPOSE 8000
 WORKDIR /app 
 COPY requirements.txt /app
+RUN apk update
+RUN apk add postgresql-dev gcc python3-dev musl-dev
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . /app 
@@ -11,15 +11,7 @@ ENTRYPOINT ["python3"]
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
 FROM builder as dev-envs
-RUN <<EOF
-apk update
-apk add git
-EOF
 
-RUN <<EOF
-addgroup -S docker
-adduser -S --shell /bin/bash --ingroup docker vscode
-EOF
 # install Docker tools (cli, buildx, compose)
 COPY --from=gloursdocker/docker / /
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
