--- a/Project/.env
+++ b/Project/.env
@@ -6,3 +6,7 @@ SQL_PASSWORD = tsduoFKLafoi9GI7sd97ds99d7799FHou
 HOST = postgres_db
 PORT = 5432
 
+# pgadmin-admin-user
+
+PGADMIN_DEFAULT_EMAIL = iamtheadmin@admin.de 
+PGADMIN_DEFAULT_PASSWORD = admin
