--- a/Project/backend/Dockerfile
+++ b/Project/backend/Dockerfile
@@ -1,5 +1,6 @@
 FROM --platform=$BUILDPLATFORM python:3.12.0-alpine3.17 AS builder
 EXPOSE 8000
+EXPOSE 5432
 WORKDIR /app 
 COPY requirements.txt /app
 RUN apk update
