--- a/Project/src/Dockerfile
+++ b/Project/src/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 5432
 WORKDIR /app 
 COPY requirements.txt /app
 RUN apk update
-RUN apk add postgresql-dev gcc python3-dev musl-dev
+RUN apk add postgresql-dev gcc python3-dev musl-dev --no-cache
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . /app
