--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ __pycache__/
 #db_root_password.txt
 
 # provider portal
-Project/measuring-operator/provider_portal/db_data
-Project/measuring-operator/provider_portal/provider_portal.log
-Project/measuring-operator/provider_portal/config/.DS_Store
-Project/measuring-operator/provider_portal/config/certificates/.DS_Store
-Project/measuring-operator/smart_meter/config/certificates/.DS_Store
+#Project/measuring-operator/provider_portal/db_data
+#Project/measuring-operator/provider_portal/provider_portal.log
+#Project/measuring-operator/provider_portal/config/.DS_Store
+#Project/measuring-operator/provider_portal/config/certificates/.DS_Store
+#Project/measuring-operator/smart_meter/config/certificates/.DS_Store
 #Project/measuring-operator/provider_portal/config/certificates/root_ca/ca-private-key.pem
