updated contract creation: integratet smartmeter-api and smartmete-creation ...

--- a/Project/electricity-provider/.env
+++ b/Project/electricity-provider/.env
@@ -16,6 +16,8 @@ PGADMIN_DEFAULT_PASSWORD = admin
 MEASUREMENT_CUSTOMER_UID = 08121bef-426f-4388-a77d-40c1b33acb0c
 MEASUREMENT_API_KEY = 6d11fe10-574f-45fe-ac5a-81bece53d33c
 MEASUREMENT_API_URL = https://sbd.jkristof.de:8100/
+MEASUREMENT_API_VERIFY_SSL = True
+MEASUREMENT_API_VERIFY_SSL_PATH = /etc/ssl/certs/ca-public-key.pem
 
 
 # ELECTRICITY PROVIDER API VARIABLES
