--- a/Project/docker-compose.yaml
+++ b/Project/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - '8000:8000'
     volumes:
       - ./electricity-provider:/app
+      - ./ssl/certs:/etc/ssl/certs
     environment:
        WEB_DOCUMENT_ROOT: /app/electricity-provider
     networks:
