implemented email-verification;

--- a/Project/electricity-provider/.env
+++ b/Project/electricity-provider/.env
@@ -1,3 +1,5 @@
+# this file contains all the variables, settings and secrets for the electricity-provider-portal. 
+
 #database variables
 SQL_Name = electricity_provider
 SQL_USER = electricity_user
@@ -18,6 +20,15 @@ MEASUREMENT_API_KEY = 6d11fe10-574f-45fe-ac5a-81bece53d33c
 MEASUREMENT_API_URL = https://sbd.jkristof.de:8100/
 MEASUREMENT_API_VERIFY_SSL = True
 MEASUREMENT_API_VERIFY_SSL_PATH = /etc/ssl/certs/ca-public-key.pem
+
+
+# django email settings
+EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend' # 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST = ''# 'mail.gmx.net'
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
+EMAIL_HOST_USER = '' # 'tinf21cs2-sbd@no-reply.de'
+EMAIL_HOST_PASSWORD = ''
 
 
 # ELECTRICITY PROVIDER API VARIABLES
